--- a/app/src/main/res/layout/adapter_confirm_order.xml
+++ b/app/src/main/res/layout/adapter_confirm_order.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,36 +8,44 @@
     card_view:cardCornerRadius="5dp"
     card_view:cardUseCompatPadding="true">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:orientation="horizontal"
         android:paddingBottom="@dimen/recyclerview_margin"
         android:paddingLeft="@dimen/recyclerview_margin"
         android:paddingRight="@dimen/recyclerview_margin"
-        android:paddingTop="@dimen/recyclerview_margin">
+        android:paddingTop="@dimen/recyclerview_margin"
+        android:weightSum="8">
+
 
         <TextView
-            android:id="@+id/title"
-            android:layout_width="fill_parent"
+            android:id="@+id/txtItemName"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/rating"
-            android:paddingBottom="10dp"
-            android:paddingEnd="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp"
+            android:layout_weight="4"
+            style="@style/padding_order_textview"
             android:textSize="22sp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/btn_arrow"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/txtItemQty"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:padding="8dp"
-            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
-    </RelativeLayout>
+            android:layout_weight="2"
+            style="@style/padding_order_textview"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtPrice"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            style="@style/padding_order_textview"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 </android.support.v7.widget.CardView>
