--- a/app/src/main/res/layout/adapter_daily_deals.xml
+++ b/app/src/main/res/layout/adapter_daily_deals.xml
@@ -1,30 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/recyclerview_margin"
-    android:paddingLeft="@dimen/recyclerview_margin"
-    android:paddingRight="@dimen/recyclerview_margin"
-    android:paddingTop="@dimen/recyclerview_margin"
-    android:background="?android:attr/selectableItemBackground"
-    android:clickable="true">
+    android:orientation="horizontal"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Title"
-        android:textSize="22sp"
-        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:padding="8dp"
-        android:text="Title"
-        android:textSize="16sp" />
-</LinearLayout>
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/recyclerview_margin"
+        android:paddingLeft="@dimen/recyclerview_margin"
+        android:paddingRight="@dimen/recyclerview_margin"
+        android:paddingTop="@dimen/recyclerview_margin">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="Title"
+                android:layout_alignParentLeft="true"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txt_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_alignParentRight="true"
+                android:text="$$"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:paddingLeft="16dp"
+            android:text="Title"
+            android:textSize="16sp" />
+        <TextView
+            android:id="@+id/txt_validity"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:paddingLeft="16dp"
+            android:textSize="16sp" />
+    </LinearLayout>
+</android.support.v7.widget.CardView>
