--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -11,12 +11,25 @@
         android:layout_alignParentTop="true"
         android:background="@color/primary">
 
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:scaleType="fitCenter"
-            android:layout_centerInParent="true" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:id="@+id/app_icon"
+            android:layout_width="72dp"
+            android:layout_height="84dp"
+            android:src="@drawable/app_icon"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#FF000000"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/app_icon"
+            android:text="@string/app_name"
+            android:layout_marginLeft="16dp"
+            android:textColor="@color/white"
+            android:textSize="22sp"/>
     </RelativeLayout>
 
 
